--- a/webapp/view/PurchaseOrder.view.xml
+++ b/webapp/view/PurchaseOrder.view.xml
@@ -78,7 +78,7 @@ xmlns:t="sap.ui.table">
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<Input width="100%" id="CntAmount" required="true" textAlign="Right" value="{path:'/number', type:'sap.ui.model.type.Currency'}"
+										<Input width="100%" id="CntAmount" required="true" textAlign="Right" value="{path:'/number', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}"
 											valueHelpOnly="true" valueHelpRequest="handleValueHelpSupplier" liveChange="fContractAmount" >
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
