[adj] ErrorLogs of All Modules
[adj] ErrorLogs of All Modules

--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -11,7 +11,7 @@ xmlns:tnt="sap.tnt">
     <tnt:header>
         <f:ShellBar title="BFI RETENTION PAYABLE ADD ON" class="myShellBar" secondTitle="" showMenuButton="true" showCopilot="false" menuButtonPressed="fMenuButtonPress" showProductSwitcher="false">
             <f:additionalContent>
-                <Button text="{path:'/UserAccount'}" icon="sap-icon://customer" type="Transparent" press="onHandleOpen">
+                <Button id="Admin" text="" icon="sap-icon://customer" type="Transparent" press="onHandleOpen">
                     <layoutData>
                         <OverflowToolbarLayoutData priority="NeverOverflow" />
                     </layoutData>
@@ -27,13 +27,11 @@ xmlns:tnt="sap.tnt">
                     <tnt:NavigationListItem text="{title}" key="{key}" enabled="true" />
                 </tnt:NavigationListItem>
             </tnt:NavigationList>
-            
             <tnt:fixedItem>
             <tnt:NavigationList items="{path: '/fixedNavigation'}" >
             	<tnt:NavigationListItem text="{title}" icon="{icon}" />
             </tnt:NavigationList>
             </tnt:fixedItem>
-
         </tnt:SideNavigation>
     </tnt:sideContent>
     <tnt:mainContents>
