--- a/webapp/view/TransactionOrder.view.xml
+++ b/webapp/view/TransactionOrder.view.xml
@@ -126,13 +126,19 @@ xmlns:t="sap.ui.table">
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<ComboBox id="Retention" width="100%" items="{Retention>/Retention}" selectedKey="{POData>/POCreation/Retention}"
+										<Select id="Retention" items="{Retention>/Retention}" forceSelection="false" selectedKey="{POData>/POCreation/Retention}" required="true" change="fSelectRetention">
+											<core:ListItem key="{Retention>CODE}" text="{Retention>NAME}"/>
+											<layoutData>
+													<l:GridData span="L3 M4 S12"/>
+											</layoutData>
+										</Select>
+										<!-- <ComboBox id="Retention" width="100%" items="{Retention>/Retention}" selectedKey="{POData>/POCreation/Retention}"
 											selectionChange="fSelectRetention" required="true" loadItems="TransCode">
 											<core:Item key="{Retention>CODE}" text="{Retention>NAME}"/>
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
-										</ComboBox>
+										</ComboBox> -->
 										<!--Posting Date-->
 										<Label text="Posting Date" width="100%">
 											<layoutData>
@@ -175,13 +181,19 @@ xmlns:t="sap.ui.table">
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<ComboBox id="Progressive" required="true" width="100%" items="{Retention>/Retention}" selectedKey="{POData>/POCreation/Progressive}"
+										<Select id="Progressive" width="100%" items="{Retention>/Retention}" selectedKey="{POData>/POCreation/Progressive}" forceSelection="false">
+											<core:ListItem  key="{Retention>CODE}" text="{Retention>NAME}"/>
+											<layoutData>
+												<l:GridData span="L3 M4 S12"/>
+											</layoutData> 
+										</Select>
+										<!-- <ComboBox id="Progressive" required="true" width="100%" items="{Retention>/Retention}" selectedKey="{POData>/POCreation/Progressive}"
 											selectionChange="onSelectRetention" >
 											<core:Item key="{Retention>CODE}" text="{Retention>NAME}"/>
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
-										</ComboBox>
+										</ComboBox> -->
 										<!--FileUploader-->
 										<u:FileUploader id="fileUploader" name="myFileUpload" uploadUrl="upload/" tooltip="Upload your file to the local server"
 											uploadComplete="handleUploadComplete" width="100%"/>
