--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -21,16 +21,15 @@ xmlns:tnt="sap.tnt">
     </tnt:header>
     <tnt:sideContent>
         <tnt:SideNavigation expanded="true" selectedKey="" itemSelect="onItemSelect">
-
-            <tnt:NavigationList items="{path: '/navigation'}" >
+            <tnt:NavigationList items="{path: '/navigation'}">
                 <tnt:NavigationListItem text="{title}" icon="{icon}" enabled="true" expanded="false" items="{items}" key="{key}">
-                    <tnt:NavigationListItem text="{title}" key="{key}" enabled="true" />
+                    <tnt:NavigationListItem text="{title}" key="{key}" enabled="true"></tnt:NavigationListItem>
                 </tnt:NavigationListItem>
             </tnt:NavigationList>
             <tnt:fixedItem>
-            <tnt:NavigationList items="{path: '/fixedNavigation'}" >
-            	<tnt:NavigationListItem text="{title}" icon="{icon}" />
-            </tnt:NavigationList>
+                <tnt:NavigationList items="{path: '/fixedNavigation'}">
+                    <tnt:NavigationListItem text="{title}" icon="{icon}"></tnt:NavigationListItem>
+                </tnt:NavigationList>
             </tnt:fixedItem>
         </tnt:SideNavigation>
     </tnt:sideContent>
