--- a/webapp/view/TransactionOrder.view.xml
+++ b/webapp/view/TransactionOrder.view.xml
@@ -90,9 +90,9 @@ xmlns:t="sap.ui.table">
 								<content>
 								<Button id="btnTransUpdate" text="Update" tooltip="Add" press="fDraftUpdate" icon="sap-icon://save" visible="{buttons>/buttons/btnTransUpdate}" />
 								<Button id="btnTransAdd" text="Add" tooltip="Add" press="fSave" icon="sap-icon://add" visible="{buttons>/buttons/btnTransAdd}" />
-								<Button id="btnTransCancel" text="Cancel" tooltip="Cancel" press="onCancel" icon="sap-icon://cancel" visible="{buttons>/buttons/btnTransCancel}" />
+								<!-- <Button id="btnTransCancel" text="Cancel" tooltip="Cancel" press="onCancel" icon="sap-icon://cancel" visible="{buttons>/buttons/btnTransCancel}" />
 								<Button id="btnTransPrint" text="Print" tooltip="Print" press="onPrint" icon="sap-icon://print"
-								visible="{buttons>/buttons/btnTransPrint}" />
+								visible="{buttons>/buttons/btnTransPrint}" /> -->
 								</content>
 							</Toolbar>
 								<VBox class="sapUiTinyMargin">
@@ -164,7 +164,7 @@ xmlns:t="sap.ui.table">
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<Input  width="100%" id="ProjCode" required="true" valueHelpRequest="onHandleValueProjCode" showValueHelp="true"  value="{POData>/POCreation/ProjectCode}" liveChange="" >
+										<Input  width="100%" id="ProjCode" required="true" valueHelpRequest="onHandleValueProjCode" showValueHelp="true" valueHelpOnly="true" value="{POData>/POCreation/ProjectCode}" >
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
