--- a/webapp/view/RetentionRecords.view.xml
+++ b/webapp/view/RetentionRecords.view.xml
@@ -1,30 +1,30 @@
- <mvc:View controllerName="com.apptech.app-retention.controller.TransactionOrder"
-xmlns:core="sap.ui.core" 
-xmlns:mvc="sap.ui.core.mvc"
-xmlns="sap.m" 
-xmlns:uxap="sap.uxap" 
-xmlns:f="sap.ui.layout.form" 
-xmlns:l="sap.ui.layout" 
-xmlns:u="sap.ui.unified" 
-xmlns:tnt="sap.tnt"
-xmlns:html="http://www.w3.org/1999/xhtml" 
-xmlns:t="sap.ui.table">
+ <mvc:View controllerName="com.apptech.app-retention.controller.RetentionRecords"
+	xmlns:core="sap.ui.core" 
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns="sap.m" 
+	xmlns:uxap="sap.uxap" 
+	xmlns:f="sap.ui.layout.form" 
+	xmlns:l="sap.ui.layout" 
+	xmlns:u="sap.ui.unified" 
+	xmlns:tnt="sap.tnt"
+	xmlns:html="http://www.w3.org/1999/xhtml" 
+	xmlns:t="sap.ui.table">
 	<App>
 		<pages>
-			<Page title="Contract Transaction">
+			<Page title="Contract Billing and Retention Payable - Transaction Records">
 				<content>
 					<IconTabBar id="idIconTabBarInlineMode" select="fIconTabSelect" headerMode="Inline" upperCase="true" expandable="false"
 						class="sapUiResponsiveContentPadding">
 						<items>
 							<IconTabFilter id="tab1" text="Records" key="tab1">
-								<Select id="selectRecordGroup" items="{POData>/POSelection}" width="40%" enabled="true" change="fSelectPurchaseTransaction">
+								<Select id="selectRecordGroup" items="{POData>/RetentionSelection}" width="40%" enabled="true" change="fSelectRetentionTransaction">
 									<core:ListItem key="{POData>CODE}" text="{POData>NAME}"/>
 								</Select>
 								<t:Table id="tblTransaction" selectionMode="Single" visibleRowCount="8" ariaLabelledBy="title" enableCellFilter="true" filter="fFilterValue"
 									rowSelectionChange="onSelectionChange" rows="{oModelOpenPO>/allbp}">
 									<t:extension>
 										<Toolbar>
-											<Button id="TranProcess" text="{oFilter>/Process/ProcName}" tooltip="Add" press="fProcess" icon="sap-icon://add" visible="{buttons>/buttons/TranProcess}" />
+											<Button id="btnContractView" text="View" tooltip="Add" press="fProcess" icon="sap-icon://add" visible="{buttons>/buttons/btnContractView}" />
 											<ToolbarSpacer/>
 										</Toolbar>
 									</t:extension>
@@ -68,28 +68,27 @@ xmlns:t="sap.ui.table">
 											wrapping="false"/>
 										</t:template>
 									</t:Column>
-									<!--Document Statuses-->
-									<t:Column width="12rem">
+									<!-- Document Statuses -->
+									<!-- <t:Column width="12rem">
 										<Label text="Document Status"/>
 										<t:template>
 											<Text id="DocStat" text="{oModelOpenPO>oDocStatus}" wrapping="false"/>
 										</t:template>
-									</t:Column>
+									</t:Column> -->
 									<!-- Updated Date-->
-									<t:Column width="12rem">
+									<!-- <t:Column width="12rem">
 										<Label text="Date Updated"/>
 										<t:template>
 											<Text id="Update" text="{oModelOpenPO>Update}"
 											wrapping="false"/>
 										</t:template>
-									</t:Column>
+									</t:Column> -->
 								</t:Table>
 							</IconTabFilter>
 							<IconTabFilter id="tab2" text="Contract No:" count="{Retention>/POCount/PONum}" key="tab2">
 							<Toolbar>
 								<content>
-								<Button id="btnTransUpdate" text="Update" tooltip="Add" press="fDraftUpdate" icon="sap-icon://save" visible="{buttons>/buttons/btnTransUpdate}" />
-								<Button id="btnTransAdd" text="Add" tooltip="Add" press="fSave" icon="sap-icon://add" visible="{buttons>/buttons/btnTransAdd}" />
+								<Button id="btnContractPrint" text="Print" tooltip="Add" press="fPrint" icon="sap-icon://print" visible="{buttons>/buttons/btnContractPrint}" />
 								<!-- <Button id="btnTransCancel" text="Cancel" tooltip="Cancel" press="onCancel" icon="sap-icon://cancel" visible="{buttons>/buttons/btnTransCancel}" />
 								<Button id="btnTransPrint" text="Print" tooltip="Print" press="onPrint" icon="sap-icon://print"
 								visible="{buttons>/buttons/btnTransPrint}" /> -->
@@ -103,8 +102,8 @@ xmlns:t="sap.ui.table">
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<Input id="BPCode" type="Text" value="{oMdlAllBP>/allbp/Vendor}" showValueHelp="true" valueHelpOnly="true"
-											valueHelpRequest="onHandleValueBPMaster" required="true" width="100%">
+										<Input id="BPCode" type="Text" value="{oMdlAllBP>/allbp/Vendor}"
+										required="true" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
